Vertical scrollbar is partially overlapped by side bar splitter #97 https://github.com/firebug/firebug.next/issues/97

--- a/chrome/skin/classic/shared/common.css
+++ b/chrome/skin/classic/shared/common.css
@@ -1,5 +1,10 @@
 /* See license.txt for terms of usage */
 
+/* Splitters */
+.devtools-side-splitter {
+  -moz-margin-start: 0;
+}
+
 /* Autocomplete Popup */
 .theme-firebug .devtools-autocomplete-popup {
   -moz-appearance: none;
